--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="gallery-container">
                 <img src="images/p1.png" alt="Einstein Image 1" class="gallery-image">
                 <img src="images/p2.png" alt="Einstein Image 2" class="gallery-image">
-                <img src="images/p3.png" alt="Einstein Image 3" class="gallery-image">
+                <img src="images/p3.jpg" alt="Einstein Image 3" class="gallery-image">
                 <img src="images/p4.png" alt="Einstein Image 4" class="gallery-image">
                 <img src="images/p5.png" alt="Einstein Image 5" class="gallery-image">
                 <img src="images/p6.png" alt="Einstein Image 6" class="gallery-image">
